--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,10 @@
-.DS_Store
-
-# Logs
+package-lock.json
 logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Dependency directories
-node_modules/
-
-# Optional npm cache directory
+pids
+node_modules
 .npm
-
-# Optional eslint cache
-.eslintcache
-
-# dotenv environment variables file
-.env
+*.dat
+Procfile
+.gitignore
+.DS_Store
