--- a/package.json
+++ b/package.json
@@ -1,38 +1,27 @@
 {
-  "name": "original-coast-clothing",
+  "name": "messenger-get-started",
   "version": "1.0.0",
-  "description": "A sample app to show how to build a great Messenger experience!",
+  "description": "Get started example for Messenger Platform",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "lint": "./node_modules/.bin/eslint ."
-  },
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "camelcase": "^5.3.1",
-    "dotenv": "^8.1.0",
-    "ejs": "^2.6.2",
-    "express": "^4.17.1",
-    "i18n": "^0.8.3",
-    "path": "^0.12.7",
-    "request": "^2.88.0"
-  },
-  "engines": {
-    "node": "^8.10.0 || ^10.13.0 || >=11.10.1"
+    "lint": "jshint --exclude node_modules .",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
-    "url": "https://github.com/fbsamples/original-coast-clothing"
+    "type": "git",
+    "url": "https://github.com/fbsamples/messenger-platform-samples.git"
   },
   "author": "Facebook",
   "license": "ISC",
-  "keywords": [
-    "messenger",
-    "webhook"
-  ],
-  "devDependencies": {
-    "eslint": "^6.2.2",
-    "eslint-config-prettier": "^6.1.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "prettier": "^1.18.2"
+  "dependencies": {
+    "body-parser": "^1.15.0",
+    "config": "^1.20.4",
+    "ejs": "^2.4.2",
+    "express": "^4.13.4",
+    "request": "^2.72.0"
+  },
+  "engines": {
+    "node": "~4.1.2"
   }
 }
